--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
             <nav class="navbar navbar-default" role="navigation" style="font-family: Tempus Sans ITC; font-size: 20px; font-weight: bold;">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">Delicious</p>
+                        <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">Dancing Taste Buds</p>
                         <!-- <a class="navbar-brand" href="#">Delicious</a> -->
                     </div>
                     <div>
