--- a/templates/menu_detail.html
+++ b/templates/menu_detail.html
@@ -44,7 +44,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">
-                        Delicious</p>
+                        Dancing Taste Buds</p>
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
@@ -101,7 +101,7 @@
                                 <!-- dish id -->
                                 <h3
                                         style="text-align: left; color: rgb(74, 77, 78); font-family: Tempus Sans ITC; font-size: 28px; text-shadow: 3px 3px 3px darkgray;">
-                                    {{ data.dishid }}</h3>
+                                    reference id: {{ data.dishid }}</h3>
                                 <!-- dish category -->
                                 <h3
                                         style="text-align: left; color: rgb(243, 173, 42); font-family: Tempus Sans ITC; font-size: 28px; text-shadow: 3px 3px 3px darkgray;">
@@ -163,7 +163,7 @@
                 <div class="tips">
                     <h3
                             style="text-align: center; color: rgb(95, 184, 213); font-family: Tempus Sans ITC; font-size: 22px; text-shadow: 3px 3px 3px darkgray;">
-                        Please don't forget to write down your comment of this dish!</h3>
+                        Please don't forget to write your comment of this dish!</h3>
                 </div>
 
                 {% if info_dict %}
