--- a/templates/register.html
+++ b/templates/register.html
@@ -68,7 +68,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">
-                        Delicious</p>
+                        Dancing Taste Buds</p>
                     <!-- <a class="navbar-brand" href="#">Delicious</a> -->
                 </div>
                 <div>
