--- a/templates/index.html
+++ b/templates/index.html
@@ -1,49 +1,115 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Restaurant</title>
-</head>
-<body>
-<h1>Welcome to Restaurant</h1>
+<html lang="en">
 
-<nav class="navbar navbar-default" role="navigation"
-     style="font-family: Tempus Sans ITC; font-size: 20px; font-weight: bold;">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">Delicious</p>
-            <!-- <a class="navbar-brand" href="#">Delicious</a> -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <style>
+        .carousel-inner .item img {
+            width: 100% !important;
+        }
+
+        .carousel-inner > .item > img {
+            width: 100%;
+            height: auto;
+        }
+
+        .carousel {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+
+<body>
+<div class="container">
+    <nav class="navbar navbar-default" role="navigation"
+         style="font-family: Tempus Sans ITC; font-size: 20px; font-weight: bold;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">Dancing Taste
+                    Buds
+                </p>                <!-- <a class="navbar-brand" href="#">Delicious</a> -->
+            </div>
+            <div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/menu">Menu</a></li>
+                    <li><a href="/aboutus">About Us</a></li>
+                    <li><a href="/contactus">Contact Us</a></li>
+                    <li><a href="/faqs">FAQs</a></li>
+                </ul>
+                {% if info_dict == null %}
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/login">Log in</a></li>
+                        <li><a href="/register">Register</a></li>
+                    </ul>
+                {% endif %}
+                {% if info_dict != null %}
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a>Welcome {{ info_dict.name }}</a></li>
+                        <li><a href="/logout">logout</a></li>
+                    </ul>
+                {% endif %}
+            </div>
         </div>
-        <div>
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/menu">Menu</a></li>
-                <li><a href="/aboutus">About Us</a></li>
-                <li><a href="/contactus">Contact Us</a></li>
-                <li><a href="/faqs">FAQs</a></li>
-            </ul>
-            {% if info_dict == null %}
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/login">Log in</a></li>
-                    <li><a href="/register">Register</a></li>
-                </ul>
-            {% endif %}
-            {% if info_dict != null %}
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a>Welcome {{ info_dict.name }}</a></li>
-                    <li><a href="/logout">logout</a></li>
-                </ul>
-            {% endif %}
+    </nav>
+    <div id="about-us-title">
+        <h3
+                style="text-align: center; color: black; font-family: Tempus Sans ITC; font-size: 38px; text-shadow: 3px 3px 3px lightsteelblue;">
+            Welcome to <span style="color: rgb(49, 175, 217);">Dancing Taste Buds !!!</span></h3>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-10 offset-1">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="static/images/restaurant-5.jpg" alt="...">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="static/images/restaurant-6.jpg" alt="...">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="static/images/restaurant-8.jpg" alt="...">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+            </div>
         </div>
     </div>
-</nav>
-
-<p>Please select an option:</p>
-<button onclick="location.href='login'">login</button>
-<button onclick="location.href='register'">register</button>
-<button onclick="location.href='aboutus'">aboutus</button>
-<button onclick="location.href='contactus'">contactus</button>
-<button onclick="location.href='faqs'">faqs</button>
-<button onclick="location.href='menu'">menu</button>
-<button onclick="location.href='menu_detail'">menu_detail</button>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
