--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -105,7 +105,7 @@
                         <h4 style="text-align: center; font-family: Ink Free; font-weight: bold; color: rgb(6, 107, 141);">
                             Email:</h4>
                         <p style="text-align: center; font-family: Ink Free; font-weight: bold; color: rgb(6, 107, 141);">
-                            info@example.com<br>contact@example.com</p>
+                            DancingTasteBuds@outlook.com<br>DancingTasteBuds@outlook.com</p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
@@ -113,7 +113,7 @@
                         <h4 style="text-align: center; font-family: Ink Free; font-weight: bold; color: rgb(6, 107, 141);">
                             Call:</h4>
                         <p style="text-align: center; font-family: Ink Free; font-weight: bold; color: rgb(6, 107, 141);">
-                            +1 5589 55488 51<br>+1 5589 22475 14</p>
+                            +44 6666 666666<br>+44 6666 666666</p>
                     </div>
                 </div>
             </div>
