--- a/templates/index.html
+++ b/templates/index.html
@@ -111,5 +111,37 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
-
+<h1></h1>
+<footer class="panel-footer" style="width: 100%; overflow: hidden;">
+    <div class="container">
+        <div class="row footer-top" style="text-align: center;">
+            <h1 style="font-family: Niagara Engraved; color: black; text-shadow: 3px 3px 3px rgb(87, 175, 233);">Dancing
+                Taste Buds</h1>
+            <h1 style="font-family: Niagara Engraved; font-size: 15px; color: black; ">©copyright</h1>
+        </div>
+        <hr style="border: 1px  solid #000000;">
+        <div class="row" style="text-align: center;">
+            <div class="col-sm-3 col-md-3 col-lg-3" style=" color: black; font-family: Rockwell;">
+                <p></p>Location</p>
+                <p>University Ave</p>
+                <p>Glasgow G12 8QQ</p>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3" style=" color: black; font-family: Rockwell;">
+                <p>Open Hours</p>
+                <p>Monday-Saturday</p>
+                <p>11:00 AM - 23:00 PM</p>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3" style=" color: black; font-family: Rockwell;">
+                <p>E-mail</p>
+                <p>DancingTasteBuds@outlook.com</p>
+                <p>DancingTasteBuds@gmail.com</p>
+            </div>
+            <div class="col-sm-3 col-md-3 col-lg-3" style=" color: black; font-family: Rockwell;">
+                <p>Call</p>
+                <p>+44 6666 666666</p>
+                <p>+44 6666 888888</p>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
