--- a/templates/register.html
+++ b/templates/register.html
@@ -120,7 +120,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="password"
                                        name="register_password" class="form-control" placeholder="Password"
                                        required="required" value="">
                             </div>
@@ -128,7 +128,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="password"
                                        name="register_confirm_password" class="form-control"
                                        placeholder="Confirm password" required="required" value="">
                             </div>
