--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,52 +8,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .why-us .box {
-            padding: 50px 30px;
-            box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-            transition: all ease-in-out 0.3s;
-            height: 100%;
-        }
-
-        .why-us .box span {
-            display: block;
-            font-size: 28px;
-            font-weight: 700;
-            color: lightskyblue;
-            font-family: Ink Free;
-        }
-
-        .why-us .box h4 {
-            font-size: 24px;
-            font-weight: 600;
-            padding: 0;
-            margin: 20px 0;
-            color: rgb(13, 173, 226);
-            font-family: Ink Free;
-        }
-
-        .why-us .box p {
-            color: #5565a1;
-            font-size: 15px;
-            font-family: Ink Free;
-            font-weight: bold;
-            margin: 0;
-            padding: 0;
-        }
-
-        .why-us .box:hover {
-            background: rgb(44, 167, 209);
-            padding: 30px 30px 70px 30px;
-            box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
-        }
-
-        .why-us .box:hover span,
-        .why-us .box:hover h4,
-        .why-us .box:hover p {
-            color: #fff;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
