--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -8,31 +8,7 @@
     <title>Contact us</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .contact-us-section .btn-sendmessage {
-            width: 30%;
-            height: 50px;
-            background-color: rgb(42, 118, 143);
-            border-color: rgb(42, 118, 143);
-            margin-bottom: 0.5em;
-            border-radius: 20px;
-        }
-
-        .contact-us-section .btn-sendmessage > value {
-            font-size: 20px;
-            color: black;
-        }
-
-        .contact-us-section .btn-sendmessage:hover {
-            width: 30%;
-            background-color: rgb(31, 89, 108);
-            border-color: rgb(31, 89, 108);
-        }
-
-        .contact-us-section .form-group_2 {
-            margin-left: 14px;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
