--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -8,12 +8,7 @@
     <title>FAQs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .faqtable {
-            font-family: MV Boli;
-            font-size: 15px;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
