--- a/templates/index.html
+++ b/templates/index.html
@@ -8,21 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .carousel-inner .item img {
-            width: 100% !important;
-        }
-
-        .carousel-inner > .item > img {
-            width: 100%;
-            height: auto;
-        }
-
-        .carousel {
-            width: 100%;
-            height: auto;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
