--- a/templates/login.html
+++ b/templates/login.html
@@ -7,51 +7,7 @@
     <title>Log in</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .login-register-form-section{
-            max-width: 350px;
-            margin: 120px auto;
-        }
-        .login-register-form-section i{
-            width: 10px;
-        }
-        .login-register-form-section .nav-tabs > li > a{
-            color: black;
-            font-family: Tempus Sans ITC;
-            font-weight: bold;
-            font-size: 30px;
-        }
-        .login-register-form-section .nav-tabs > li > a,
-        .login-register-form-section .nav-tabs > li.active > a{
-            width: 340px;
-            text-align: center;
-            border-radius: 0;
-        }
-        .login-register-form-section .nav-tabs{
-            padding-bottom: 10px;
-            margin-bottom: 10px;
-        }
-        .login-register-form-section .btn-custom{
-            width: 100%;
-            background-color: rgb(10, 147, 165);
-            border-color: rgb(10, 147, 165);
-            margin-bottom: 0.5em;
-            border-radius: 0;
-            font-family: Tempus Sans ITC;
-            font-weight: bold;
-        }
-        .login-register-form-section .btn-custom:hover{
-            width: 100%;
-            background-color: rgb(56, 107, 141);
-            border-color: rgb(56, 107, 141);
-            font-family: Tempus Sans ITC;
-            font-weight: bold;
-        }
-        .login-register-form-section .form-group{
-            padding: 0 20px;
-        }
-
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="row">
