--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,106 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
-    <style>
-        .menu #menu-flters {
-            padding: 0;
-            margin: 0 auto 0 auto;
-            list-style: none;
-            text-align: center;
-            border-radius: 50px;
-        }
-
-        .menu #menu-flters li {
-            cursor: pointer;
-            display: inline-block;
-            padding: 8px 16px 10px 16px;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 1;
-            color: #444444;
-            margin: 0 3px 10px 3px;
-            transition: all ease-in-out 0.3s;
-            background: #fff;
-            border: 2px solid rgb(96, 169, 189);
-            border-radius: 50px;
-        }
-
-        .menu #menu-flters li:hover,
-        .menu #menu-flters li.filter-active {
-            color: #fff;
-            background: rgb(96, 169, 189);
-        }
-
-        .menu #menu-flters li:last-child {
-            margin-right: 0;
-        }
-
-        .menu .menu-content {
-            margin-top: 30px;
-            overflow: hidden;
-            display: flex;
-            justify-content: space-between;
-            position: relative;
-            color: rgb(97, 96, 96);
-        }
-
-        .menu .menu-content::after {
-            content: "......................................................................" "...................................................................." "....................................................................";
-            position: absolute;
-            left: 20px;
-            right: 0;
-            top: -4px;
-            z-index: 1;
-            color: #dad8d4;
-        }
-
-        .menu .menu-content a {
-            padding-right: 10px;
-            background: #fff;
-            position: relative;
-            z-index: 3;
-            font-weight: 700;
-            color: rgb(6, 107, 141);
-            font-family: Tempus Sans ITC;
-        }
-
-        .menu .menu-content span {
-            background: #fff;
-            position: relative;
-            z-index: 3;
-            padding: 0 10px;
-            font-weight: 600;
-        }
-
-        h3 {
-            font-family: "Satisfy", sans-serif;
-        }
-
-        .section-bg {
-            background-color: white;
-        }
-
-        .section-title {
-            text-align: center;
-            padding-bottom: 30px;
-        }
-
-        .section-title p {
-            margin: 15px auto 0 auto;
-            font-weight: 300;
-        }
-
-        @media (min-width: 1024px) {
-            .section-title p {
-                width: 50%;
-            }
-        }
-
-        .menu .menu-content > span {
-            font-family: Tempus Sans ITC;
-            color: rgb(81, 79, 79);
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
     <title>Restaurant Menu</title>
 </head>
 
