--- a/templates/menu_detail.html
+++ b/templates/menu_detail.html
@@ -8,32 +8,7 @@
     <title>Menu_detail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        .dish-comment .btn-comment {
-            width: 20%;
-            background-color: rgb(10, 147, 165);
-            border-color: rgb(10, 147, 165);
-            margin-bottom: 0.5em;
-            border-radius: 0;
-            font-family: Tempus Sans ITC;
-            font-weight: bold;
-            border-radius: 20px;
-        }
-
-        .dish-comment .btn-comment:hover {
-            width: 20%;
-            background-color: rgb(56, 107, 141);
-            border-color: rgb(56, 107, 141);
-            font-family: Tempus Sans ITC;
-            font-weight: bold;
-        }
-
-        p, h2 {
-            font-size: 10px;
-            margin-top: 2px;
-            font-family: Tempus Sans ITC;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
